--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.37.1",
     "convex": "^1.31.7",
     "next": "16.1.6",
     "react": "19.2.3",
