--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.37.1",
+    "@vercel/analytics": "^1.6.1",
     "convex": "^1.31.7",
     "next": "16.1.6",
     "react": "19.2.3",
