--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "convex": "^1.31.7",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "stripe": "^20.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
