--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/nextjs": "^6.37.1",
     "@vercel/analytics": "^1.6.1",
     "convex": "^1.31.7",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "stripe": "^20.3.0"
   },
   "devDependencies": {
