Implement v2 parallel rebuild foundation and wire v2 services/APIs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@v2/*": ["./src_v2/*"]
     }
   },
   "include": [
