Split intent/final decision flow and add room thread detail UX

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,11 @@
   "name": "FunFund",
   "short_name": "FunFund",
   "description": "判断の切れを可視化するプラットフォーム",
+  "id": "/",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
+  "display_override": ["standalone", "minimal-ui"],
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "orientation": "portrait-primary",
